--- a/src/Components/HomeStudent.css
+++ b/src/Components/HomeStudent.css
@@ -12,10 +12,11 @@ div.courses {
     height: 32em;
     margin-top: 10px;
     margin-bottom: 10px;
+    background-color: whitesmoke;
     box-shadow:
-       inset 0 -3em 3em rgba(0,0,0,0.1),
+       inset 0 -3em 3em rgba(119, 15, 119, 0.205),
              0 0  0 2px rgb(255,255,255),
-             0.3em 0.3em 1em rgba(0,0,0,0.3);
+             0.3em 0.3em 1em rgba(119, 15, 119, 0.205);
 
              border: blanchedalmond;
     
@@ -37,11 +38,12 @@ div.courses {
       margin-top: 1em;
       margin-bottom: 1em;
       box-shadow:
-      inset 0 -3em 3em rgba(0,0,0,0.1),
+      inset 0 -3em 3em rgba(119, 15, 119, 0.205),
             0 0  0 2px rgb(255,255,255),
-            0.3em 0.3em 1em rgba(0,0,0,0.3);
+            0.3em 0.3em 1em rgba(119, 15, 119, 0.205);
 
       border: blanchedalmond;
+      background-color: #5a156e;
 
   }
 
@@ -52,31 +54,39 @@ div.courses {
      overflow: hidden;
      opacity: 80%;
      
+     
+     
 
   }
 
 .enroll-card-text{
       text-decoration-color: black;
-      color: #374045;
+      color: #5a156e;
   }
 
   .enroll-card-title{
     text-decoration-color: black;
-    color:#374045;
+    color:#463352;
     font-weight: bold;
     
 }
 
 .jumbotron {
     box-shadow:
-       inset 0 -3em 3em rgba(0,0,0,0.1),
+       inset 0 -3em 3em rgba(119, 15, 119, 0.205),
              0 0  0 2px rgb(255,255,255),
-             0.3em 0.3em 1em rgba(0,0,0,0.3);
+             0.3em 0.3em 1em rgba(119, 15, 119, 0.205);
+    
+}
+
+.student {
+    background-image: url(../images/jumbotron-01.png);
+    background-size: cover;
 }
 
 h1.display-4{
     padding: 0;
-    color:#374045;
+    color:#463352;
     font-weight: bold;
 
 }
@@ -87,13 +97,13 @@ h1.display-4{
     margin-top: 0px;
     padding: 0px 0px;
     box-shadow:
-       inset 0 -3em 3em rgba(0,0,0,0.1),
+       inset 0 -3em 3em rgba(119, 15, 119, 0.205),
              0 0  0 2px rgb(255,255,255),
-             0.3em 0.3em 1em rgba(0,0,0,0.3);
+             0.3em 0.3em 1em rgba(119, 15, 119, 0.205);
 }
 
 .explore-title{
-    color:#374045;
+    color: #463352;
     font-weight: bold;
 
 }
@@ -110,3 +120,15 @@ h1.display-4{
     margin-bottom: 5em;
     
 }
+
+body {
+    /* background-image: url(../images/bg-home.png); */
+    /* background-color: rgb(184, 154, 184); */
+    background-color: ghostwhite;
+}
+
+.btn-course{
+    background-color: rgb(85, 31, 82);
+    border: 0px;
+}
+
