--- a/src/Components/HomeStudent.css
+++ b/src/Components/HomeStudent.css
@@ -96,6 +96,10 @@ h1.display-4{
     flex: 1 1 auto;
     margin-top: 0px;
     padding: 0px 0px;
+    
+}
+
+.card-explore{
     box-shadow:
        inset 0 -3em 3em rgba(119, 15, 119, 0.205),
              0 0  0 2px rgb(255,255,255),
