--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -56,3 +56,19 @@
   color: #fff;
   padding: 16px;
 }
+
+.header{
+  /* background-color: #dc96ba; */
+  margin-bottom: 3em;
+  background-image: url("https://images.unsplash.com/photo-1579547621309-5e57ab324182?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=2500&q=800" );
+  border: none;
+  box-shadow:
+       inset 0 -3em 3em rgba(119, 15, 119, 0.205),
+             0.3em 0.3em 1em rgba(63, 4, 63, 0.205);
+  
+  
+}
+
+.header-items{
+  color:#463352;
+}
