--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -27,21 +27,48 @@
   text-align: center;
 }
 
-.dropdown-active {
+ul.dropdown-active {
   width: 200px;
   position: absolute;
-  top: 50px;
-  list-style: none;
-  text-align: left;
+  /* top: 50px; */
+  /* list-style: none; */
+  text-align: center;
+  border-radius: 15px 50px 30px;
+  padding: none;
+  
+  
 }
 
+li{
+  padding: none;
+}
+
+.drop{
+  border-radius: 15px 50px 30px;
+}
+
+ul.dropdown-active.drop {
+  padding: none;
+  border-radius: 15px 50px 30px;
+}
+
+
+
 .dropdown-active li{
-  background: #1999ff;
+  
   cursor: pointer;
+  padding-right: 2px;
+  border-radius: 15px 50px 30px;
+
 }
 
 .dropdown-active li:hover{
-  background: #5cabff;
+  background: #f5b8cf;
+  box-shadow:
+       inset 0 -3em 3em rgba(119, 15, 119, 0.205),
+             0.3em 0.3em 1em rgba(119, 15, 119, 0.205);
+  /* background: #7d4b8a; */
+  text-decoration-color: #f2f2f2;
 }
 
 .dropdown-inactive{
@@ -53,8 +80,9 @@
   width: 100%;
   height: 100%;
   text-decoration: none;
-  color: #fff;
-  padding: 16px;
+  color:#463352;
+  padding-bottom: 16px;
+  padding-top: 16px;
 }
 
 .header{
@@ -69,6 +97,37 @@
   
 }
 
-.header-items{
+.head-item{
   color:#463352;
+  /* font-weight: bold; */
+}
+
+.head-item{
+
+}
+
+ul {
+  padding: none;
+}
+
+.logout{
+  text-align: center;
+  padding-left: 2em;
+  padding-bottom: 13px;
+  
+}
+
+ul.drop{
+  border-radius: 15px 50px 30px;
+  /* background: #dc96ba; */
+  background-image: linear-gradient(to bottom, #dc96ba, #7d4b8a);
+  /* background-image: linear-gradient(to bottom, #fedae8, #7d4b8a); */
+
+  
+}
+
+li.dropdown-item {
+    /* padding: 0px; */
+    padding-left: 0;
+    padding-right: 4em;
 }
