--- a/src/Components/HomeStudent.css
+++ b/src/Components/HomeStudent.css
@@ -104,6 +104,11 @@ h1.display-4{
     flex: 1 1 auto;
     margin-top: 0px;
     padding: 0px 0px;
+    box-shadow:
+       inset 0 -3em 3em rgba(119, 15, 119, 0.205),
+             0 0  0 2px rgb(255,255,255),
+             0.3em 0.3em 1em rgba(119, 15, 119, 0.205);
+    border-radius: 2px;
     
 }
 
@@ -136,6 +141,7 @@ h1.display-4{
 body {
     /* background-image: url(../images/bg-home.png); */
     background-color: rgb(184, 154, 184);
+    padding-bottom: 10px;
     /* background-color: ghostwhite; */
 }
 
