--- a/src/Components/footer.css
+++ b/src/Components/footer.css
@@ -1,6 +1,7 @@
 .footer {
-    margin-top: 10em;
+    
     background-image: url("https://images.unsplash.com/photo-1579547621309-5e57ab324182?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=2500&q=800" );
+    height: 55px;
     
 }
 
@@ -8,9 +9,13 @@
     color:#463352;
     padding-left: 3em;
     
+    
 }
 
+.foot-links{
+    padding-top: 1em;
+}
 
 body{
-    margin-bottom: 5em;
+    margin-bottom: 2em;
 }
