--- a/src/Components/footer.css
+++ b/src/Components/footer.css
@@ -2,6 +2,7 @@
     
     background-image: url("https://images.unsplash.com/photo-1579547621309-5e57ab324182?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=2500&q=800" );
     height: 55px;
+    position: relative;
     
 }
 
@@ -18,4 +19,5 @@
 
 body{
     margin-bottom: 2em;
+    min-height: 100%;
 }
