--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -131,3 +131,9 @@ li.dropdown-item {
     padding-left: 0;
     padding-right: 4em;
 }
+
+.nav-icon {
+  background-color: transparent;
+  border: none;
+  
+}
