--- a/src/Auth/RegisterStudent.css
+++ b/src/Auth/RegisterStudent.css
@@ -35,6 +35,7 @@
     margin-bottom: 1em;
     margin-bottom: 50px;
   }
+  
   input:placeholder-shown {
     font-style: italic;
     opacity: 50%;
@@ -50,7 +51,7 @@
      padding: 0.75em;
  }
 
- body {
+ /* body {
    background: oldlace;
    background-color: oldlace;
- }
+ } */
